Create the page style with CSS

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
         <label for="student-course">Course</label>
         <input type="text" id="student-course" required />
         <br />
+        <div class="left-buttons">
+          <button id="clear-button">Clear</button>
+          <button id="submit-button">Submit</button>
+        </div>
       </form>
-      <button id="clear-button">Clear</button>
-      <button id="submit-button">Submit</button>
     </div>
 
     <div class="right">
