--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
         <input type="tel" id="student-phone" required />
         <br />
         <label for="student-course">Course</label>
-        <input type="text" id="student-course" required />
+        <select name="student-course" id="student-course">
+          <option value="law">Law</option>
+          <option value="engineering">Engineering</option>
+          <option value="medicine">Medicine</option>
+        </select>
+        <!-- <input type="text" id="student-course" required /> -->
         <br />
         <div class="left-buttons">
           <button id="clear-button">Clear</button>
