Fixsome bugs in the form

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         <br />
         <label for="student-course">Course</label>
         <select name="student-course" id="student-course">
+          <option value="none">--</option>
           <option value="law">Law</option>
           <option value="engineering">Engineering</option>
           <option value="medicine">Medicine</option>
         </select>
-        <!-- <input type="text" id="student-course" required /> -->
         <br />
         <div class="left-buttons">
-          <button id="clear-button">Clear</button>
           <button id="submit-button">Submit</button>
+          <button id="clear-button">Clear</button>
         </div>
       </form>
     </div>
